<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/indonesia"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_country"
                android:layout_margin="6dp"
                android:text="@string/date" />

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_date"
                android:layout_margin="6dp"
                android:text="23"
                android:textColor="@color/black"
                android:textSize="60sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_date"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@+id/tv_temperature"
                android:text="Symbol"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/image_weather_1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/tv_date"
                android:layout_alignParentEnd="true"
                android:layout_margin="6dp"
                android:src="@drawable/weather" />

            <ImageButton
                android:id="@+id/image_weather_2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@id/tv_temperature"
                android:layout_marginStart="6dp"
                android:layout_marginTop="26dp"
                android:src="@drawable/cloud_rain" />

            <TextView
                android:id="@+id/tv_precipitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_temperature"
                android:layout_marginStart="6dp"
                android:layout_marginTop="26dp"
                android:layout_toEndOf="@id/image_weather_2"
                android:text="@string/precipitation"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/weather_3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@id/tv_temperature"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:layout_toEndOf="@+id/tv_precipitation"
                android:src="@drawable/cloud" />

            <TextView
                android:id="@+id/tv_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_temperature"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:layout_toEndOf="@id/weather_3"
                android:text="@string/winds"
                android:textColor="@color/black" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_weather_2"
                android:layout_margin="6dp">
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chip_1"
                    android:text="@string/chip_1"
                    style="@style/Widget.MaterialComponents.Chip.Action"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chip_2"
                    android:text="@string/chip_2"
                    style="@style/Widget.MaterialComponents.Chip.Action"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chip_3"
                    android:text="@string/chip_3"
                    style="@style/Widget.MaterialComponents.Chip.Action"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chip_4"
                    android:text="@string/chip_4"
                    style="@style/Widget.MaterialComponents.Chip.Action"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chip_5"
                    android:text="@string/chip_5"
                    style="@style/Widget.MaterialComponents.Chip.Action"/>
            </com.google.android.material.chip.ChipGroup>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/list_view"
                android:layout_margin="6dp"
                android:layout_below="@+id/chip_group"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/view_line"
                android:background="@color/background"
                android:layout_below="@id/list_view"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_toggle"
                android:text="COLLAPSE"
                android:textSize="18sp"
                android:layout_below="@+id/view_line"
                android:layout_margin="16dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>